--- a/themes/plain/style.css
+++ b/themes/plain/style.css
@@ -47,12 +47,12 @@
     font-family: 'Arial';
     font-size: 0.8rem;
     font-weight: bold;
-    letter-spacing: 0.08em;
+    letter-spacing: 0.02em;
     color: #fff;
     padding: 0px 20px;
     z-index: 2;
     display: flex;
-    opacity: 1;
+    opacity: 0.8;
     visibility: visible;
     align-items: center;
     justify-content: center;
